# vcpkg_gtest

./: CMakeLists.txt  README.md  main.cpp
